# mock-api

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: settings.py
app/data/agreementManagement/: agreement.json
app/data/balance/: 1000000001.json  balance.json
app/data/quota/: quota.json
app/data/status/: agreement.json  quota.json
app/data/tests/: agreement.json
app/models/: schemas.py
app/services/: data_loader.py  mock_behavior_service.py  token_service.py
tests/: conftest.py  test_api.py  test_services.py
